--- a/views/visit.erb
+++ b/views/visit.erb
@@ -1,2 +1,22 @@
 <h2>Make an appointment</h2>
 <p>You can make an appointment on this webpage</p>
+
+<form action="/visit" method="POST" role="form">
+  
+    <div class="form-group">
+      <label>Your name</label>
+      <input name="username" type="text" class="form-control" placeholder="Your name">
+    </div>
+
+    <div class="form-group">
+      <label>Your date</label>
+      <input name="date" type="text" class="form-control" placeholder="Your date">
+    </div>
+
+    <div class="form-group">
+      <label>Your time</label>
+      <input name="time" type="text" class="form-control" placeholder="Your time">
+    </div>
+  
+    <button class="btn btn-primary" type="submit">Submit form</button>
+</form>
