--- a/views/visit.erb
+++ b/views/visit.erb
@@ -9,6 +9,11 @@
     </div>
 
     <div class="form-group">
+    <label>Your phone</label>
+    <input name="phone" type="text" class="form-control" placeholder="Your phone">
+    </div>
+
+    <div class="form-group">
       <label>Your date</label>
       <input name="date" type="text" class="form-control" placeholder="Your date">
     </div>
