--- a/views/layout.erb
+++ b/views/layout.erb
@@ -31,7 +31,8 @@
 			    <ul class="nav navbar-nav">
 			      <li><a href="/about">About</a></li>
 			      <li><a href="/visit">Make an appointment</a></li>
-			      <li><a href="/contacts">Contacts</a></li>
+				  <li><a href="/contacts">Contacts</a></li>
+				  <li><a href="/admin">For admins only</a></li>
 			    </ul>
 			  </div><!--/.nav-collapse -->
 			</nav>
