--- a/views/visit.erb
+++ b/views/visit.erb
@@ -22,6 +22,15 @@
       <label>Your time</label>
       <input name="time" type="text" class="form-control" placeholder="Your time">
     </div>
+    
+    <div class="form-group">
+      <select name="fcker">
+        <option value="none" selected>Choose your personal assfcker ...</option>
+        <option value="Big Joe">Big Joe</option>
+        <option value="Tricky Ricky">Tricky Ricky</option>
+        <option value="Sissy Pososi">Sissy Pososi</option>
+      </select>
+    </div>
   
-    <button class="btn btn-primary" type="submit">Submit form</button>
+    <button class="btn btn-primary" type="submit">Submit</button>
 </form>
